# msh

./: .gitignore  ChangeLog.md  LICENSE  README.md  msh.cabal
src/: Main.hs
src/Msh/: Core.hs  IO.hs  Lang.hs  Options.hs
tst/: UnitTests.hs
tst/Mocks/: IO.hs
