name:                msh
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              xenoexplorator
maintainer:          cedric.pinard@gmail.com
category:            System

build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable msh
  main-is:             Main.hs
  other-modules:
  other-extensions:
  build-depends:       base == 4.9.*, mtl == 2.2.1.*, optparse-applicative >= 0.14
  hs-source-dirs:      src
  default-language:    Haskell2010
  
