name:                msh
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              xenoexplorator
maintainer:          cedric.pinard@gmail.com
category:            System

build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable msh
  main-is:             Main.hs
  build-depends:       base == 4.9.*,
                       directory >= 1.3,
                       mtl == 2.2.1.*,
                       optparse-applicative >= 0.14
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite unit
  type:                exitcode-stdio-1.0
  main-is:             UnitTests.hs
  build-depends:       base == 4.9.*,
                       directory >= 1.3,
                       mtl == 2.2.1.*,
                       optparse-applicative >= 0.14
  ghc-options:         -Wall
  hs-source-dirs:      tst
  default-language:    Haskell2010
  build-depends:       test-framework,
                       test-framework-hunit,
                       HUnit
